[package]
name = "hello_world"
version = "0.1.0"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
edition = "2021"
publish = false
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Hello, RustyHermit!"
exclude = ["/.gitlab-ci.yml", ".gitignore", ".gitattributes", "/.vscode/*", "/.github/*"]

[dependencies]
tiny_http = "0.11"

[target.'cfg(target_os = "hermit")'.dependencies.hermit-sys]
default-features = false

[features]
default = ["fsgsbase", "pci", "pci-ids", "acpi", "tcp", "dhcpv4"]
vga = ["hermit-sys/vga"]
dhcpv4 = ["hermit-sys/dhcpv4"]
pci = ["hermit-sys/pci"]
pci-ids = ["hermit-sys/pci-ids"]
acpi = ["hermit-sys/acpi"]
fsgsbase = ["hermit-sys/fsgsbase"]
smp = ["hermit-sys/smp"]
tcp = ["hermit-sys/tcp"]
instrument = ["hermit-sys/instrument"]
trace = ["hermit-sys/trace"]